--- a/src/main/resources/assets/eyespy/lang/en_us.json
+++ b/src/main/resources/assets/eyespy/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "eyespy.title": "Eye Spy",
   "key.eyespy.ping": "Eye Spy: Ping",
+  "eyespy.toast.ping.noSpyglass": "Press %s to ping.",
   "eyespy.toast.ping.noZoom": "Press %s when holding a %s to ping a block or entity.",
   "eyespy.toast.ping.withZoom": "Press %s when zoomed in with a %s to ping a block or entity.",
   "eyespy.rangefinder.outOfRange": "Out of range",
